src/objects/Cricket_Match_Details__c.object
<CustomObject>
    <description>Store Match Statistics</description>
    <fields>
        <fullName>Match_Condition__c</fullName>
        <description>Match Condition</description>
        <inlineHelpText>Match Condition</inlineHelpText>
        <label>Match Condition</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Normal</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Stopped(Due to rain)</fullName>
                </value>
                <value>
                    <fullName>Tied</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Match_Number__c</fullName>
        <description>Stores match number.</description>
        <inlineHelpText>Stores match number.</inlineHelpText>
        <label>Match Number</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Match_Prediction_Locked__c</fullName>
        <description>Match&apos;s Prediction Locked?</description>
        <formula>IF($System.OriginDateTime  &lt;  Match_Schedule__c,false,true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Match&apos;s Prediction Locked?</inlineHelpText>
        <label>Match&apos;s Prediction Locked?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Match_Result_Statement__c</fullName>
        <description>Match Result Statement</description>
        <inlineHelpText>Match Result Statement</inlineHelpText>
        <label>Match Result Statement</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Match_Schedule__c</fullName>
        <description>Match Schedule</description>
        <inlineHelpText>Match Schedule</inlineHelpText>
        <label>Match Schedule</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Match_Venue__c</fullName>
        <description>Match Venue</description>
        <inlineHelpText>Match Venue</inlineHelpText>
        <label>Match Venue</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Team_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References Playing Team from Actual Team object.</description>
        <inlineHelpText>References Playing Team from Actual Team object.</inlineHelpText>
        <label>Team 1</label>
        <referenceTo>Cricket_Actual_Team__c</referenceTo>
        <relationshipLabel>Cricket Actual Team 1</relationshipLabel>
        <relationshipName>Cricket_Actual_Team_1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Team_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References Playing Actual Team 2</description>
        <inlineHelpText>References Playing Actual Team 2</inlineHelpText>
        <label>Team 2</label>
        <referenceTo>Cricket_Actual_Team__c</referenceTo>
        <relationshipLabel>Cricket Actual Team 2</relationshipLabel>
        <relationshipName>Cricket_Actual_Team_2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Winning_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>References actual team&apos;s record according to result of match</description>
        <inlineHelpText>Store Team that won match.</inlineHelpText>
        <label>Winning Team</label>
        <referenceTo>Cricket_Actual_Team__c</referenceTo>
        <relationshipLabel>Cricket Match Details (Winning Team)</relationshipLabel>
        <relationshipName>Cricket_Winning_Team</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cricket Match Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CMD-{0000}</displayFormat>
        <label>Cricket Match Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cricket Match Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>